fix: removed little gaps between the boxes

--- a/src/components/Art/styles.scss
+++ b/src/components/Art/styles.scss
@@ -11,6 +11,10 @@
         background-color: white; //fallback color
     }
 
+    svg * {
+        // Removes little gaps between the shapes
+        shape-rendering: crispEdges;
+      }
 }
 
 .box {
